--- a/htc/src/assets/i18n/ru.json
+++ b/htc/src/assets/i18n/ru.json
@@ -19,5 +19,9 @@
   },
   "staffs": {
     "title": "Сотрудники"
+  },
+  "profile": {
+    "myProfile": "Личный кабинет",
+    "exit": "Выход"
   }
 }
