--- a/htc/src/assets/i18n/ru.json
+++ b/htc/src/assets/i18n/ru.json
@@ -6,7 +6,7 @@
     "title": "Новости"
   },
   "сlaim": {
-    "title": "Заявление"
+    "title": "Заявки"
   },
   "board": {
     "title": "Канбан"
