--- a/htc/src/assets/i18n/ru.json
+++ b/htc/src/assets/i18n/ru.json
@@ -8,7 +8,8 @@
   },
   "patterns": {
     "from": "с",
-    "to": "по"
+    "to": "по",
+    "chooseElement": "Выберите данные"
   },
   "news": {
     "title": "Новости"
