--- a/htc/src/assets/i18n/ru.json
+++ b/htc/src/assets/i18n/ru.json
@@ -26,7 +26,7 @@
     "crDateFrom": "Дата создания",
     "lastModifyDate": "Дата последнего изменения",
     "lastCommentDate": "Дата последнего комментирования",
-    "textSearch": "Посик по тексту",
+    "textSearch": "Поиск по тексту",
     "claimType": "Тип заявки",
     "addToShow": "Добавить на показ",
     "opening": "Открытые",
