--- a/htc/src/assets/i18n/ru.json
+++ b/htc/src/assets/i18n/ru.json
@@ -23,6 +23,7 @@
     "impressions": "Показы",
     "journals": "Журналы",
     "aboutDeal": "О Сделке",
+    "aboutOwner": "О Владельце",
     "searchClaim": "Поиск заявки",
     "crDateFrom": "Дата создания",
     "lastModifyDate": "Дата последнего изменения",
