--- a/htc/src/assets/i18n/ru.json
+++ b/htc/src/assets/i18n/ru.json
@@ -2,7 +2,15 @@
   "clear": "Очистить",
   "search": "Поиск",
   "fio": "ФИО",
+  "name": "Имя",
+  "surname": "Фамилия",
+  "patronymic": "Отчество",
   "phone": "Телефон",
+  "gender": "Пол",
+  "men": "Муж.",
+  "women": "Жен.",
+  "yes": "Да",
+  "no": "Нет",
   "analytics": {
     "title": "Аналитика"
   },
@@ -24,6 +32,7 @@
     "journals": "Журналы",
     "aboutDeal": "О Сделке",
     "aboutOwner": "О Владельце",
+    "aboutObject": "Об Объекте",
     "searchClaim": "Поиск заявки",
     "crDateFrom": "Дата создания",
     "lastModifyDate": "Дата последнего изменения",
@@ -35,7 +44,52 @@
     "openingSell": "Открытые продать",
     "openingBuy": "Открытые купить",
     "closed": "Закрытые",
-    "transactionType": "Вид сделки"
+    "transactionType": "Вид сделки",
+    "clientID": "ID клиента",
+    "contacts": "Контакты",
+    "email": "Почта",
+    "operation": "Операция",
+    "objectType": "Тип объекта",
+    "objectPriceInLim": "Цена объекта (млн/тг)",
+    "ipoteka": "Ипотека",
+    "encumbrance": "Обременение",
+    "commonOwnership": "Общая долевая собственность",
+    "barter": "Обмен",
+    "city": "Город",
+    "building": "ЖК",
+    "street": "Улица",
+    "numberHouse": "Номер дома",
+    "roomCount": "Количество комнат",
+    "quadrature": "Квадратура",
+    "saveClaim": "Сохранить заявку",
+    "generateContract": "Сформировать договор",
+    "square": "Площадь",
+    "live": "Жилая",
+    "kitchen": "Кухня",
+    "balcony": "Балкон",
+    "heightWall": "Высота потолков",
+    "badRoomCount": "Количество спален",
+    "studio": "Студия",
+    "separateBathroom": "Санузел раздельный",
+    "characterHouse": "Характеристика дома",
+    "porch": "Подъезд",
+    "territory": "Территория",
+    "concierge": "Консьерж",
+    "stroller": "Колясочная",
+    "parking": "Парковка",
+    "yard": "Двор",
+    "opened": "Открытый",
+    "closing": "Закрытый",
+    "childYard": "Детская площадка",
+    "withoutParking": "Отсутствует парковка",
+    "overgroundParking": "Надземный паркинг",
+    "undergroundParking": "Подземный паркинг",
+    "district": "Район",
+    "flatHouse": "Этажность дома",
+    "appInFlat": "Кв. на площадке",
+    "material": "Материал",
+    "buildYear": "Год постройки",
+    "lift": "Лифт"
   },
   "board": {
     "title": "Канбан"
