--- a/htc/src/assets/i18n/ru.json
+++ b/htc/src/assets/i18n/ru.json
@@ -11,6 +11,7 @@
   "women": "Жен.",
   "yes": "Да",
   "no": "Нет",
+  "open": "Открыть",
   "analytics": {
     "title": "Аналитика"
   },
@@ -92,7 +93,17 @@
     "lift": "Лифт"
   },
   "board": {
-    "title": "Канбан"
+    "title": "Канбан",
+    "commonBoard": "Общая воронка",
+    "sellBoard": "Воронка продаж",
+    "buyerBoard": "Воронка покупателей",
+    "firstContact": "Первичный контакт",
+    "meet": "Встреча",
+    "dvou": "Договор на оказания услуг",
+    "adv": "Реклама",
+    "photoset": "Фотосет",
+    "show": "Показ",
+    "closedContract": "Закрытие сделки"
   },
   "objects": {
     "title": "Обьекты"
