--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -117,7 +117,8 @@
       "mortgageProblems": "Проблемы с выплатами по ипотеке",
       "other": "Другое"
     },
-    "comments": "Комментарий"
+    "comments": "Комментарий",
+    "more": "более"
   },
   "board": {
     "title": "Канбан",
