--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -20,7 +20,9 @@
     "to": "по",
     "fillFromAndTo": "Введите дату с и по",
     "chooseElement": "Выберите данные",
-    "noDataFount": "Данные не найдены"
+    "noDataFount": "Данные не найдены",
+    "from2": "от",
+    "to2": "до"
   },
   "news": {
     "title": "Новости"
