--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -104,7 +104,7 @@
     "live": "Жилая",
     "kitchen": "Кухня",
     "balcony": "Балкон",
-    "heightWall": "Высота потолков",
+    "heightWall": "Выс. потолков",
     "badRoomCount": "Количество спален",
     "studio": "Студия",
     "separateBathroom": "Санузел раздельный",
