--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -38,7 +38,7 @@
       "firstName": "Имя",
       "surname": "Фамилия",
       "phoneNumber": "Контакты",
-      "objectPrice": "Цена объекта (млн/тг)",
+      "objectPrice": "Цена объекта (тг)",
       "streetId": "Улица",
       "houseNumber": "Номер дома",
       "numberOfRooms": "Количество комнат",
@@ -55,7 +55,7 @@
     "impressions": "События",
     "journals": "Журналы",
     "aboutDeal": "О Сделке",
-    "aboutOwner": "О Владельце",
+    "aboutOwner": "О Клиенте",
     "aboutObject": "Об Объекте",
     "searchClaim": "Поиск заявки",
     "crDateFrom": "Дата создания",
@@ -87,7 +87,7 @@
     "email": "Почта",
     "operation": "Операция",
     "objectType": "Тип объекта",
-    "objectPriceInLim": "Цена объекта (млн/тг)",
+    "objectPriceInLim": "Цена объекта (тг)",
     "ipoteka": "Ипотека",
     "encumbrance": "Обременение",
     "commonOwnership": "Общая долевая собственность",
