--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -23,7 +23,8 @@
     "noDataFount": "Данные не найдены",
     "from2": "от",
     "to2": "до",
-    "save": "Сохранить"
+    "save": "Сохранить",
+    "cancel": "Отмена"
   },
   "news": {
     "title": "Новости"
