--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -49,7 +49,10 @@
       "ceilingHeight": "Высота потолков",
       "numberOfBedrooms": "Количество спален",
       "operationTypeId": "Операция",
-      "contractNumber": "Номер договора"
+      "contractNumber": "Номер договора",
+      "postcode": "Полный адрес",
+      "apartmentNumber": "Номер квартиры",
+      "objectTypeId": "Тип объекта"
     },
     "title": "Заявки",
     "step": "Шаг",
