--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -54,7 +54,8 @@
       "apartmentNumber": "Номер квартиры",
       "objectTypeId": "Тип объекта",
       "contractTypeId": "Тип договора",
-      "contractSum": "Сумма по договору"
+      "contractSum": "Сумма по договору",
+      "commission": "Размер комиссии"
     },
     "title": "Заявки",
     "step": "Шаг",
