--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -182,6 +182,8 @@
   },
   "profile": {
     "myProfile": "Личный кабинет",
-    "exit": "Выход"
+    "exit": "Выход",
+    "logout": "Выйти",
+    "passwordChange": "Смена пароля"
   }
 }
